[package]
name = "sniper_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# telegram-client = "1.8.*"
# rtdlib = { version = "1.8.*", features = ["sys"] }
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.36.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
chrono = "0.4.35"
serde_json = "1.0.114"
ethers = "2.0.14"
lazy_static = "1.4.0"
thousands = "0.2.0"
