[package]
name = "snipers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# openssl required to build to linux
openssl = { version = "0.10", features = ["vendored"] }
teloxide = { version = "0.12", features = ["macros", "webhooks-axum"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.36.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
chrono = "0.4.35"
serde_json = "1.0.114"
# ethers = "2.0.14"     # 250+ dependencies is insane, find an alternative or only import what's needed (core etc)
lazy_static = "1.4.0"
thousands = "0.2.0"
keccak-rust = "1.0.2"
dotenv = "0.15.0"
